fix: layout issue when toggle mobile operation button

--- a/src/styles/playerMobile.less
+++ b/src/styles/playerMobile.less
@@ -2,12 +2,13 @@
 @import './mixins.less';
 .react-jinke-music-player-mobile {
   @mobile-padding: 20px;
-  height: 100%;
   width: 100%;
   position: fixed;
   z-index: 999;
   left: 0;
   top: 0;
+  right: 0;
+  bottom: 0;
   padding: @mobile-padding;
   color: #fff;
   display: flex;
@@ -26,8 +27,8 @@
   &-play-model-tip {
     position: fixed;
     left: 0;
-    width: 100%;
     top: 0;
+    width: 100%;
     height: 35px;
     line-height: 35px;
     background-color: @primary-color;
